# news_api

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/versions/: 505eb7a4a99d_initial_tables.py
app/: .gitignore  main.py
app/api/routes/: news.py
app/core/: config.py
app/models/: news.py
app/schemas/: news.py
app/services/: parser.py
