[project]
name = "news-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "fastapi-cache2[redis] (>=0.2.2,<0.3.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
